--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "build": "tsc"
+    "build": "tsc",
+    "debug" : "node --inspect index.js",
+    "start" : "node index.js",
+    "forever" : "forever start forever/production.json --spinSleepTime 10000 --minUptime 5000",
+    "stop" : "forever stop monocle-gateway"
   },
+
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MonocleCam/MonocleGateway.git"
@@ -30,6 +36,7 @@
   },
   "homepage": "https://github.com/MonocleCam/MonocleGateway#readme",
   "dependencies": {
+    "@types/node": "^9.4.6",
     "fs-extra": "^5.0.0",
     "node-onvif": "^0.1.3",
     "underscore": "^1.8.3",
